* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.5.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.2
- Removed EL6 support

* Mon Mar 23 2020 Trevor Vaughan <tvaughan@onyxpont.com> - 0.4.1
- Add explicit support for setting the rescue/emergency shell on systemd systems.

* Thu Jan 09 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.0
- Add EL8 support
- Update the upper bound of simp-simplib to < 5.0.0

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.4.0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Tue Jun 04 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 0.3.0
- Add v2 compliance_markup data

* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.3
- Use Simplib::Umask data type in lieu of validate_umask(),
  a deprecated simplib Puppet 3 function.
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Aug 24 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.2.2
- Add support for Puppet 5 and OEL
- Update badges in README.md

* Wed Dec 13 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.1
- Set the minimum and maximum UID and GID allowed onto the system to the
  default defined in /etc/login.defs or a sensible default if not otherwise
  specified

* Wed Jun 14 2017 Brandon Riden <brandon.riden@onyxpoint.com> - 0.2.0
- Allow users to specify colors as strings instead of ansi codes in sysconfig/init
- Updated sysconfig_init.pp to reflect these changes as well as add notes
- Updated template to convert color strings to ansi code

* Wed Jun 14 2017 Brandon Riden <brandon.riden@onyxpoint.com> - 0.2.0
- Fix bug in libuser.conf where userBranch was referencing groupbranch variable
- Added/fixed author on all manifests
- Created Acceptance test
- Updated spec/spec_helper_acceptance.rb
- Added Managed by Puppet comment to all file templates